# docval

./: CHANGELOG.md  README.md  TODO.md  fixes.txt  goal.yaml  planfile.yaml  pyproject.toml  report.md
docs/: README.md
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
src/docval/: __init__.py  chunker.py  cli.py  context.py  models.py  pipeline.py
src/docval/actions/: __init__.py  executor.py
src/docval/exporters/: __init__.py  github.py  gitlab.py  planfile.py  todo.py
src/docval/reporters/: __init__.py  console.py  json_report.py  markdown_report.py
src/docval/validators/: __init__.py  crossref.py  heuristic.py  llm_validator.py
tests/: test_chunker.py  test_crossref.py  test_heuristic.py  test_pipeline.py
